fix some comment, ossurl, default sync ...
